--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   </head>
 
   <body>
-  <header class="page-header">
+ <header class="page-header">
   <div class="container">
-    Контакты в шапке
+    <a class="header-email" href="mailto:enot_neopoznanniy@gmail.com">enot_neopoznanniy@gmail.com</a>
+    <a class="header-phone" href="tel:+79876543210">+7 987 654 32 10</a>
   </div>
-  </header>
+</header>
 
     <section class="hero-image">
       <div class="container">
