--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
     </section>
 
     <footer class="page-footer">
-      <div class="container">
-      Контакты в подвале
-      </div>
-    </footer>
+  <div class="container">
+    <a class="footer-email" href="mailto:enot_neopoznanniy@gmail.com">enot_neopoznanniy@gmail.com</a>
+    <a class="footer-phone" href="tel:+79876543210">+7 987 654 32 10</a>
+  </div>
+</footer>
   </body>
 </html>
