--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
         </figure>
       <h3>Сайт инструктора Кекса</h3>
-        <a class="button" href="portfolio-step-1/source/project/index.html">Открыть страницу</a>
+        <a class="button" href="portfolio-step-1/source/project/project 2/index.html">Открыть страницу</a>
       <p>Небольшой лендинг о школе для начинающих.</p>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
