--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
       </div>
     </section>
 
+    <div class="skills">
+  <h3>Мои навыки</h3>
+  <dl class="skills-list">
+    <dt>HTML</dt>
+    <dd><div>60%</div></dd>
+    <dt>CSS</dt>
+    <dd><div>40%</div></dd>
+  </dl>
+   </div>
 
     <section class="portfolio">
       <div class="container">
