--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
       </div>
     </section>
 
-    <div class="skills">
+<div class="skills">
   <h3>Мои навыки</h3>
   <dl class="skills-list">
-    <dt>HTML</dt>
-    <dd><div>60%</div></dd>
-    <dt>CSS</dt>
-    <dd><div>40%</div></dd>
+    <dt class="skill-html">HTML</dt>
+    <dd class="level"><div style="width: 60%;">60%</div></dd>
+    <dt class="skill-css">CSS</dt>
+    <dd class="level"><div style="width: 40%;">40%</div></dd>
   </dl>
-   </div>
+</div>
 
     <section class="portfolio">
       <div class="container">
